--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Vezetéknév</th>
-                            <th>Keresztnév</th>
-                            <th>Életkor</th>
+                            <th>Surname</th>
+                            <th>First name</th>
+                            <th>Age</th>
                             <th></th>
                         </tr>
                     </thead>
