--- a/bt.html
+++ b/bt.html
@@ -42,18 +42,18 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
-                <H3>Hamburger rendelés</H3>
+                <H3>Hamburger order</H3>
                 <form action="">
                     <div class="form group">
-                        <label for="">Feltét</label>
+                        <label for="">Topping</label>
                         <input type="text" name="top-input" class="form-control">
                     </div>
                     <div class="form group">
-                        <label for="">Mennyiség</label>
+                        <label for="">Quantity</label>
                         <input type="number" name="amount-input" class="form-control">
                     </div>
                     <div class="form-group">
-                        Fizetendő: <span class="show-amount">0</span>Ft
+                        Payable: <span class="show-amount">0</span>Ft
                     </div>
                     <button onclick="calcAmount()" type="button" class="btn btn-primary">Megrendelés</button>
                 </form>
