--- a/order-form.html
+++ b/order-form.html
@@ -11,21 +11,21 @@
     <div class="container">
         <form>
             <fieldset>
-                <legend>Személyes Adatok</legend>
+                <legend>Personal details</legend>
                 <div>
-                    <label for="name">Név: *</label>
-                    <input id="name" name="name" type="text" placeholder="Név" required>
+                    <label for="name">Name: *</label>
+                    <input id="name" name="name" type="text" placeholder="Name" required>
                 </div>
                 <div>
-                    <label for="email">Email cím: *</label>
-                    <input id="email" name="email" type="email" placeholder="Email cím" required>
+                    <label for="email">Email Address: *</label>
+                    <input id="email" name="email" type="email" placeholder="Email Address" required>
                 </div>
                 <div>
-                    <label for="address">Cím: *</label>
-                    <input id="address" name="address" type="text" placeholder="Cím" required>
+                    <label for="address">Address: *</label>
+                    <input id="address" name="address" type="text" placeholder="Address" required>
                 </div>
                 <div>
-                    <label for="comment">Megjegyzés: *</label>
+                    <label for="comment">Comment: *</label>
                     <textarea id="comment" name="comment" rows="5"></textarea>
                 </div>
 
@@ -33,46 +33,46 @@
         </form>
     </div>
     <fieldset>
-        <legend>Termék Adatai</legend>
-        <span>Extra feltét:</span>
+        <legend>Add more</legend>
+        <span>Extra Topping:</span>
         <div>
             <input checked id="nothing" name="extra" type="radio" value="0">
-            <label for="nothing">Nem kérek</label>
+            <label for="nothing">Nothing</label>
         </div>
         <div>
             <input id="cheese" name="extra" type="radio" value="300">
-            <label for="cheese">feltét 1</label>
+            <label for="cheese">Topping 1</label>
         </div>
         <div>
             <input id="double-cheese" name="extra" type="radio" value="600">
-            <label for="double-cheese">feltét 2</label>
+            <label for="double-cheese">Topping 2</label>
         </div>
         <div>
             <input id="double-meat" name="extra" type="radio" value="1000">
-            <label for="double-meat">feltét 3</label>
+            <label for="double-meat">Topping 3</label>
         </div>
         <div>
             <input id="double-double" name="extra" type="radio" value="1600">
-            <label for="double-double">feltét 4</label>
+            <label for="double-double">Topping 4</label>
         </div>
         <div>
             <input id="valami-mas" name="extra" type="radio" value="1800">
-            <label for="valami-mas">feltét 5</label>
+            <label for="valami-mas">Topping 5</label>
         </div>
         <div>
-            <label for="sauce">Szósz:</label>
+            <label for="sauce">Sauce:</label>
             <select name="sauce" id="sauce">
-                <option value="0" selected>Szósz 1</option>
-                <option value="100">Szósz 2</option>
+                <option value="0" selected>Sauce 1</option>
+                <option value="100">Sauce 2</option>
             </select>
         </div>
         <div>
-            <label for="quantity">Mennyiség</label>
+            <label for="quantity">Quantity</label>
             <input type="number" id="quantity" name="quantity" min="1" max="10">
         </div>
     </fieldset>
     <div>
-        <input type="button" value="Rendelés Leadása"> Ár: <span>1200</span> Ft
+        <input type="button" value="Rendelés Leadása"> Price: <span>1200</span> Ft
     </div>
 
 
