--- a/css.html
+++ b/css.html
@@ -14,39 +14,42 @@
     <h3 id="bioheader">BIO</h3>
     <p class="content">
 
-<span class="bold">John Doe.</span>
-He is a programmer in Google.
+        <span class="bold">John Doe.</span>
+        He is a programmer in Google.
 
 
     </p>
     <h3 id="skillsheader">SKILLS</h3>
-    <p class="content">A Toyota Supra a japán Toyota autógyár 1978 és 2002 között gyártott sportautó/túraautó-modellje
-        volt. Az első két generáció a Toyota Celica tervei alapján készült, de hosszabb és szélesebb volt nála,
-        ekkoriban a modell teljes neve még Toyota Celica Supra volt. Az 1986-os év közepén jelent meg a Supra harmadik
-        generációja, mely már nem a Toyota Celica tervei alapján készült és a neve is csak egyszerűen Toyota Supra lett,
-        a Celica előtag nélkül. Ennek ellenére még ekkor is volt hasonlóság a két modell között, így gyakran
-        összetévesztették őket. Az első, második és harmadik generációs Suprákat Taharában, a negyedik generációs
-        modelleket Toyota Cityben szerelték össze.
+    <p class="content">The Toyota Supra (Japanese: トヨタ・スープラ, Toyota Sūpura) is a sports car and grand tourer
+        manufactured by Toyota Motor Corporation beginning in 1978. The initial four generations of the Supra were
+        produced from 1978 to 2002. The fifth generation has been produced since March 2019 and went on sale in May
+        2019.[3] The styling of the original Supra was derived from the Toyota Celica, but it was both longer and
+        wider.[4] Starting in mid-1986, the A70 Supra became a separate model from the Celica. In turn, Toyota also
+        stopped using the prefix Celica and named the car Supra.[5] Owing to the similarity and past of the Celica's
+        name, it is frequently mistaken for the Supra, and vice versa. The first, second and third generations of the
+        Supra were assembled at the Tahara plant in Tahara, Aichi, while the fourth generation was assembled at the
+        Motomachi plant in Toyota City. The fifth generation of the Supra is assembled alongside the G29 BMW Z4 in Graz,
+        Austria by Magna Steyr.
     </p>
 
     <p>Images</p>
-<div class="img-div">
-    <img id="img-1" src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-    <img src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-    <img src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-</div>
+    <div class="img-div">
+        <img id="img-1" src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+        <img src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+        <img src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+    </div>
 
-<div class="img-div light">
-    <img src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-    <img src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-    <img src="img/programmer.jpg" alt="programmer">
-    <img src="img/programmer2.jpg" alt="programmer">
-</div>
+    <div class="img-div light">
+        <img src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+        <img src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+        <img src="img/programmer.jpg" alt="programmer">
+        <img src="img/programmer2.jpg" alt="programmer">
+    </div>
 
 
 
